--- a/app/src/main/res/layout/activity_ese.xml
+++ b/app/src/main/res/layout/activity_ese.xml
@@ -229,7 +229,7 @@
                             android:textSize="16sp"
                             android:textStyle="bold" />
                         <TextView
-                            android:id="@+id/Totalese"
+                            android:id="@+id/Totalese11"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:gravity="center"
