--- a/app/src/main/res/layout/activity_ise2.xml
+++ b/app/src/main/res/layout/activity_ise2.xml
@@ -76,6 +76,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -107,6 +108,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:singleLine="false"
                             android:gravity="center"
                             android:textColor="#FFFFFF" />
@@ -138,6 +140,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:singleLine="false"
                             android:gravity="center"
                             android:textColor="#FFFFFF" />
@@ -168,6 +171,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
                                 android:layout_weight="3"
+                                android:inputType="number"
                                 android:singleLine="false"
                                 android:gravity="center"
                                 android:textColor="#FFFFFF" />
@@ -201,6 +205,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:singleLine="false"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:textColor="#FFFFFF" />
@@ -312,6 +317,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:singleLine="false"
                             android:gravity="center"
                             android:textColor="#FFFFFF" />
@@ -343,6 +349,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -374,6 +381,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -404,6 +412,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
                                 android:layout_weight="3"
+                                android:inputType="number"
                                 android:gravity="center"
                                 android:singleLine="false"
                                 android:textColor="#FFFFFF" />
@@ -438,6 +447,7 @@
                             android:hint="out of 5"
                             android:gravity="center"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
                     </LinearLayout>
@@ -576,6 +586,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:layout_weight="3"
                             android:singleLine="false"
                             android:gravity="center"
@@ -608,6 +619,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:gravity="center"
+                            android:inputType="number"
                             android:layout_weight="3"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -638,6 +650,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
                                 android:singleLine="false"
+                                android:inputType="number"
                                 android:layout_weight="3"
                                 android:gravity="center"
                                 android:textColor="#FFFFFF" />
@@ -671,6 +684,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:gravity="center"
+                            android:inputType="number"
                             android:layout_weight="3"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
