--- a/app/src/main/res/layout/activity_mse.xml
+++ b/app/src/main/res/layout/activity_mse.xml
@@ -75,6 +75,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:singleLine="false"
@@ -107,6 +108,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -138,6 +140,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:layout_weight="3"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -167,6 +170,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
+                                android:inputType="number"
                                 android:gravity="center"
                                 android:layout_weight="3"
                                 android:singleLine="false"
@@ -200,6 +204,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:singleLine="false"
@@ -342,6 +347,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:layout_weight="3"
                             android:gravity="center"
                             android:singleLine="false"
@@ -374,6 +380,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:singleLine="false"
@@ -405,6 +412,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
                                 android:layout_weight="3"
+                                android:inputType="number"
                                 android:gravity="center"
                                 android:singleLine="false"
                                 android:textColor="#FFFFFF" />
@@ -437,6 +445,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:singleLine="false"
@@ -548,6 +557,7 @@
                             android:hint="out of 5"
                             android:layout_weight="3"
                             android:singleLine="false"
+                            android:inputType="number"
                             android:gravity="center"
                             android:textColor="#FFFFFF" />
                     </LinearLayout>
@@ -579,6 +589,7 @@
                             android:hint="out of 5"
                             android:layout_weight="3"
                             android:gravity="center"
+                            android:inputType="number"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
                     </LinearLayout>
@@ -609,6 +620,7 @@
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
                             android:layout_weight="3"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:textColor="#FFFFFF" />
@@ -639,6 +651,7 @@
                                 android:layout_height="wrap_content"
                                 android:hint="out of 5"
                                 android:layout_weight="3"
+                                android:inputType="number"
                                 android:gravity="center"
                                 android:singleLine="false"
                                 android:textColor="#FFFFFF" />
@@ -671,6 +684,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:singleLine="false"
                             android:layout_weight="3"
