--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -109,7 +109,7 @@
             android:orientation="horizontal">
 
 
-            <ImageButton
+           <!-- <ImageButton
                 android:id="@+id/deleteicon"
                 android:layout_width="24.0dip"
                 android:layout_height="24.0dip"
@@ -125,17 +125,17 @@
                 android:clickable="true"
                 android:cropToPadding="false"
                 android:focusable="false"
-                android:focusableInTouchMode="false" />
+                android:focusableInTouchMode="false" />-->
 
             <ImageButton
                 android:id="@+id/assignmarksicon"
                 android:layout_width="24.0dip"
                 android:layout_height="24.0dip"
                 android:layout_gravity="bottom|center|right"
-                android:layout_marginLeft="36dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
-                android:layout_toRightOf="@id/deleteicon"
+
                 android:background="@drawable/result"
                 android:clickable="true"
                 android:onClick="assignMarks" />
