--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -40,111 +40,118 @@
                         android:textColor="#FFFFFF"
                         android:textSize="20sp" />
                 </LinearLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/input_layout_guide_name"
-                    android:textColorHint="#FFFFFF">
-                    <EditText
-                        android:id="@+id/guidename"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Guide name"
-                        android:singleLine="false"
-                        android:textColor="#FFFFFF" />
 
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/input_layout_groupno"
-                    android:textColorHint="#FFFFFF">
-                    <EditText
-                        android:id="@+id/editTextgroupno"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Group Number"
-                        android:singleLine="false"
-                        android:textColor="#FFFFFF" />
+                <!--<Spinner
+                   android:id="@+id/myspinner"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" />-->
 
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/input_layout_subject_name"
-                    android:textColorHint="#FFFFFF">
-                    <EditText
-                        android:id="@+id/editTextTopicName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Topic Name"
-                        android:singleLine="false"
-                        android:textColor="#FFFFFF" />
+               <com.google.android.material.textfield.TextInputLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:id="@+id/input_layout_guide_name"
+                   android:textColorHint="#FFFFFF">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                   <EditText
+                       android:id="@+id/guidename"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:hint="Guide name"
+                       android:singleLine="false"
+                       android:textColor="#FFFFFF" />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/input_layout_student1"
-                    android:textColorHint="#FFFFFF">
+               </com.google.android.material.textfield.TextInputLayout>
+               <com.google.android.material.textfield.TextInputLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:id="@+id/input_layout_groupno"
+                   android:textColorHint="#FFFFFF">
+                   <EditText
+                       android:id="@+id/editTextgroupno"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:hint="Group Number"
+                       android:singleLine="false"
+                       android:textColor="#FFFFFF" />
 
-                    <EditText
-                        android:id="@+id/editTextStudent1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Student 1"
-                        android:singleLine="false"
-                        android:textColor="#FFFFFF"
-                        />
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/input_layout_student2"
-                        android:textColorHint="#FFFFFF">
+               </com.google.android.material.textfield.TextInputLayout>
+               <com.google.android.material.textfield.TextInputLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:id="@+id/input_layout_subject_name"
+                   android:textColorHint="#FFFFFF">
+                   <EditText
+                       android:id="@+id/editTextTopicName"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:hint="Topic Name"
+                       android:singleLine="false"
+                       android:textColor="#FFFFFF" />
 
-                        <EditText
-                            android:id="@+id/editTextStudent2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="Student 2"
-                            android:textColor="#FFFFFF" />
+               </com.google.android.material.textfield.TextInputLayout>
 
-                    </com.google.android.material.textfield.TextInputLayout>
-                </com.google.android.material.textfield.TextInputLayout>
+               <com.google.android.material.textfield.TextInputLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:id="@+id/input_layout_student1"
+                   android:textColorHint="#FFFFFF">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/input_layout_student3"
-                    android:layout_width="match_parent"
-                    android:layout_height="155dp"
-                    android:textColorHint="#FFFFFF">
+                   <EditText
+                       android:id="@+id/editTextStudent1"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:hint="Student 1"
+                       android:singleLine="false"
+                       android:textColor="#FFFFFF"
+                       />
+                   <com.google.android.material.textfield.TextInputLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:id="@+id/input_layout_student2"
+                       android:textColorHint="#FFFFFF">
 
-                    <EditText
-                        android:id="@+id/editTextStudent3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Student 3"
-                        android:textColor="#FFFFFF" />
+                       <EditText
+                           android:id="@+id/editTextStudent2"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:hint="Student 2"
+                           android:textColor="#FFFFFF" />
 
-                    <Button
+                   </com.google.android.material.textfield.TextInputLayout>
+               </com.google.android.material.textfield.TextInputLayout>
 
-                        android:id="@+id/savedatabase"
-                        android:layout_width="148dp"
-                        android:layout_height="47dp"
-                        android:layout_marginBottom="136dp"
-                        android:background="@color/browser_actions_bg_grey"
-                        android:text="Save"
-                        android:textColor="#000"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.498"
-                        app:layout_constraintStart_toStartOf="parent" />
-                    />
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/input_layout_student3"
+                   android:layout_width="match_parent"
+                   android:layout_height="155dp"
+                   android:textColorHint="#FFFFFF">
 
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+                   <EditText
+                       android:id="@+id/editTextStudent3"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:hint="Student 3"
+                       android:textColor="#FFFFFF" />
+
+                   <Button
+
+                       android:id="@+id/savedatabase"
+                       android:layout_width="148dp"
+                       android:layout_height="47dp"
+                       android:layout_marginBottom="136dp"
+                       android:background="@color/browser_actions_bg_grey"
+                       android:text="Save"
+                       android:textColor="#000"
+                       android:textSize="18sp"
+                       android:textStyle="bold"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintHorizontal_bias="0.498"
+                       app:layout_constraintStart_toStartOf="parent" />
+                   />
+
+               </com.google.android.material.textfield.TextInputLayout>
+           </LinearLayout>
+       </LinearLayout>
+   </ScrollView>
 </FrameLayout>
