--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="147dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
@@ -17,24 +17,127 @@
         android:layout_height="match_parent"
         android:background="@drawable/card_border"
         android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
 
 
-        <TextView
-            android:id="@+id/txttopicname"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:fontFamily="sans-serif-black"
-            android:gravity="center|center_vertical"
-            android:text="Topic name"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+
+                android:text="Group No : "
+
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/grpnoadmin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/textView3"
+                android:maxLength="21"
+                android:text="Grouo No"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="1dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+
+                android:text="Guide Name : Prof."
+
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txtguide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/textView4"
+                android:maxLength="21"
+                android:text="GuideName"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="1dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+
+                android:text="Topic Name : "
+
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txttopicname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/textView5"
+                android:maxLength="21"
+                android:text="Topic Name"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/textstud1name"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="20dp"
             android:fontFamily="sans-serif-medium"
             android:padding="3dp"
@@ -45,8 +148,8 @@
         <TextView
             android:id="@+id/textstud2name"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="20dp"
             android:fontFamily="sans-serif-medium"
             android:padding="3dp"
@@ -57,8 +160,8 @@
         <TextView
             android:id="@+id/textstud3name"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="39dp"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="20dp"
             android:fontFamily="sans-serif-medium"
             android:padding="5dp"
