--- a/app/src/main/res/layout/activity_ise2.xml
+++ b/app/src/main/res/layout/activity_ise2.xml
@@ -555,6 +555,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="out of 5"
+                            android:inputType="number"
                             android:gravity="center"
                             android:layout_weight="3"
                             android:singleLine="false"
