--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -52,6 +52,20 @@
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+            <ImageButton
+
+                android:layout_toRightOf="@id/grpnoadmin"
+                android:layout_width="24.0dip"
+                android:layout_height="24.0dip"
+                android:layout_gravity="bottom|center|right"
+                android:layout_marginLeft="170dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:id="@+id/deletegrp"
+
+                android:background="@drawable/del"
+                android:clickable="true"
+                 />
 
 
         </RelativeLayout>
